tests/NormalTests/paczka1/small_fuzzy/52147708.err
Error in line 11: zuJISBOl5 S600 69,1
Error in line 9: 9yh0N S749 98,3
